navbar fixed alignment

--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -52,6 +52,10 @@ background-image: url("https://www.transparenttextures.com/patterns/fabric-of-sq
  width:84vw;
 }
 
+.home_button, .home_button a{
+    border-bottom: 2px solid #8888a2;
+  }
+
 @media screen and (min-width: 750px){
     .main_container{
         padding-left:8vw; /**/
